--- a/app-favorites.css
+++ b/app-favorites.css
@@ -1,6 +1,114 @@
- {
+/* CSS HEADER DEBUT */
+
+body {
+    width: 100%;
+    position: absolute;
+    margin: 0px;
+    padding: 0px;
+    background: url('bodybackground.jpg');
+    background-repeat: all;
+    
+}
+
+header {
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    background: rgba(236, 209, 150, 0.8) ;
+    box-shadow: 0px 5px 10px 5px grey;
+    
+    
+}
 
 
+.headerboxes {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    
+}
+    
+
+.headerbox2 {
+    position: relative;
+    left: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-top: 60px;
+    width: 60%;
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
+
+
+
+.header_logoclick {
+    -webkit-transition: all 1s ease; 
+    -moz-transition: all 1s ease; 
+    -ms-transition: all 1s ease; 
+    -o-transition: all 1s ease; 
+    transition: all 1s ease;
+    
+    
+}
+
+
+.header_logoclick:hover {
+    -webkit-transform:scale(1.4); 
+    -moz-transform:scale(1.4);
+    -ms-transform:scale(1.4); 
+    -o-transform:scale(1.4); 
+    transform:scale(1.4);
+}
+
+#logoappfav {
+   max-width: 100%;
+   height: auto;
+   width: 200px;
+    -webkit-transition: all 1s ease; 
+    -moz-transition: all 1s ease; 
+    -ms-transition: all 1s ease; 
+    -o-transition: all 1s ease; 
+    transition: all 1s ease;
+}
+
+#logoappfav:hover {
+    max-width: 100%;
+    height: auto;
+    width: 200px;
+    -webkit-transform:scale(1.2); 
+    -moz-transform:scale(1.2);
+    -ms-transform:scale(1.2); 
+    -o-transform:scale(1.2); 
+    transform:scale(1.2);
+ }
+
+#header_logofl {
+    max-width: 100%;
+    height: auto;
+    width: 110px;
+}
+
+#header_logoshz {
+    max-height: 100%;
+    width: auto;
+    height: 60px;
+}
+
+
+#header_logoclash {
+    position: relative;
+    bottom: 15px;
+    max-width: 100%;
+    height: auto;
+    width: 130px;
 
     
- }
+}
+
+
+body {
+  
+}
