--- a/app-favorites.css
+++ b/app-favorites.css
@@ -110,3 +110,33 @@ header {
 
 
 /* CSS HEADER FIN */
+
+main {
+    width: 80%;
+    margin: 0% auto;
+    background-color: thistle;
+    opacity:80%;
+    height: auto;
+    text-align: center;
+}
+
+
+.appboxcentrale {
+    text-align: center;
+    width: 400px;
+    height: 400px;
+}
+
+.appboxbas {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
+
+.appminibox {
+    text-align: center;
+    width: 400px;
+    height: 400px;
+    border: 3px solid black;&
+}
