--- a/app-favorites.css
+++ b/app-favorites.css
@@ -266,6 +266,29 @@ a {
 
 /* STYLE BONBON BOX END*/
 
+/*CSS FOOTER DEBUT */
+
+footer {
+    width: 100%;
+    height: 200px;
+    padding: 0px;
+    margin: 0px;
+    background: rgba(255, 255, 255, 0.9) ;
+    box-shadow: 0px 5px 10px 5px grey;
+}
+
+.boxiosvsandroid {
+    display: flex;
+    flex-direction: row;
+    padding-top: 20px;
+}
+
+.logofooter {
+    height: 70px;
+    width: 70px;
+}
+
+
 
 
 
